# leros2

./: .gitignore  README.md  pyproject.toml  workspace.packages
.github/workflows/: publish.yml
examples/: dual-arm-wrench.yaml
examples/lerobot_robot_ur/: README.md  pyproject.toml
examples/lerobot_robot_ur/lerobot_robot_ur/: __init__.py  config_ur.py  ur.py
examples/lerobot_robot_ure/: README.md  convert_config.yaml  pyproject.toml
examples/lerobot_robot_ure/lerobot_robot_ure/: config_ure.py  ure.py
examples/lerobot_teleoperator_pose/: README.md  pyproject.toml
examples/lerobot_teleoperator_pose/lerobot_teleoperator_pose/: __init__.py  config_pose.py  pose.py
examples/leros2_record_utils/: package.xml  pyproject.toml  setup.py
examples/leros2_record_utils/config/: record_utils.yaml
examples/leros2_record_utils/launch/: utils.launch.py
examples/leros2_record_utils/leros2_record_utils/: record_utils.py
src/leros2/: common.py  common_config.py  robot.py  robot_config.py  teleoperator.py  teleoperator_config.py
src/leros2/components/: compressed_image.py  factory.py  float_array_action.py  float_array_state.py  image.py  joint_action.py  joint_state.py  parallel_gripper_action.py  pose_action.py  pose_state.py  wrench_action.py  wrench_state.py
src/leros2/components/common/: __init__.py  action.py  base.py  base_image.py  state.py
src/leros2/scripts/: convert.py
tests/: image_node.py  ros2_camera.py
