[project]
name = "leros2"
version = "0.1.0"
description = "LeRobot ROS2 interfaces"
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "black>=25.11.0",
    "cv-bridge>=1.13.0.post0",
    "draccus>=0.10.0",
    "lerobot>=0.5.1,<0.5.2"
]

[tool.uv.workspace]
members = ["examples/*"]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "leros2"
module-root = "src"

[project.scripts]
leros2-convert = "leros2.scripts.convert:main"

[tool.pixi.workspace]
channels = ["conda-forge", "robostack-jazzy"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.feature.jazzy.dependencies]
ros-jazzy-rclpy = "*"
ros-jazzy-rosidl-runtime-py = "*"
ros-jazzy-sensor-msgs = "*"
ros-jazzy-trajectory-msgs = "*"
ros-jazzy-control-msgs = "*"
packaging = "<26.0"
setuptools = "<81.0.0"
numpy = ">=2.0.0,<2.3.0"

[tool.pixi.feature.jazzy.pypi-dependencies]


[tool.pixi.environments]
jazzy = ["jazzy"]