[project]
name = "leros2"
version = "0.1.0"
description = "LeRobot ROS2 interfaces"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.11.0",
    "cv-bridge>=1.13.0.post0",
    "draccus>=0.10.0",
    "lerobot>=0.6.0,<0.7.0",
]

[project.optional-dependencies]
dataset = [
    "lerobot[dataset]",
    "mcap-ros2-support>=0.5.7,<0.6",
]

[tool.uv.workspace]
members = ["packages/*", "examples/*"]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "leros2"
module-root = "src"

[project.scripts]
leros2-convert = "leros2.scripts.convert:main"

[tool.pixi.workspace]
channels = ["conda-forge", "robostack-jazzy"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.feature.jazzy.dependencies]
ros-jazzy-rclpy = "*"
ros-jazzy-rosidl-runtime-py = "*"
ros-jazzy-sensor-msgs = "*"
ros-jazzy-trajectory-msgs = "*"
ros-jazzy-control-msgs = "*"
ros-jazzy-geometry-msgs = "*"
packaging = "<26.0"
setuptools = "<81.0.0"
numpy = ">=2.0.0,<2.3.0"

[tool.pixi.feature.jazzy.activation.env]
# torch bundles its own libomp.dylib alongside conda's llvm-openmp; both are the
# same LLVM OpenMP runtime, so allow the duplicate init instead of aborting.
KMP_DUPLICATE_LIB_OK = "TRUE"

[tool.pixi.feature.jazzy.pypi-dependencies]
leros2 = { path = ".", editable = true, extras = ["dataset"] }
lerobot_robot_ros2 = { path = "packages/lerobot_robot_ros2", editable = true }
lerobot_teleoperator_ros2 = { path = "packages/lerobot_teleoperator_ros2", editable = true }


[tool.pixi.feature.publish.dependencies]
uv = ">=0.9.10"

[tool.pixi.feature.publish.tasks]
clean-dist = { cmd = "rm -rf dist" }
# Build sdists + wheels for the main package and every packages/* member into dist/.
# Examples are intentionally excluded.
build-dist = { cmd = "uv build --out-dir dist . && uv build --out-dir dist packages/lerobot_robot_ros2 && uv build --out-dir dist packages/lerobot_teleoperator_ros2", depends-on = ["clean-dist"] }

[tool.pixi.environments]
jazzy = ["jazzy"]
publish = { features = ["publish"], no-default-feature = true }
